--- a/clanok.tex
+++ b/clanok.tex
@@ -1,17 +1,12 @@
-% Metódy inžinierskej práce
-
 \documentclass[10pt,twoside,slovak,a4paper]{article}
 
 \usepackage[slovak]{babel}
-%\usepackage[T1]{fontenc}
 \usepackage[IL2]{fontenc} 
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{url}
-\usepackage{hyperref} 
-
+\usepackage{hyperref}
 \usepackage{cite}
-%\usepackage{times}
 
 \pagestyle{headings}
 
@@ -23,9 +18,7 @@
 	{\small \texttt{xbohuslavkyi@stuba.sk}}
 	}
 
-\date{\small 3. oktober 2024} % upravte
-
-
+\date{\small 3. oktober 2024}
 
 \begin{document}
 
@@ -34,11 +27,11 @@
 \begin{abstract}
 Túto tému som si vybral, pretože je veľmi zaujímavé, ako technológie a umelá inteligencia(ktorá je v súčasnosti jednou z najrozvíjajúcejších sa tém) ovplyvňujú naše každodenné rozhodovanie o tom, čo sledujeme. Ja som zvedavý, že ako po zhliadnutí jedného tureckého filmu, ktorý som ani neohodnotil, sa mi v odporúčaniach začali objavovať podobné filmy. 
 
-V systéme sa nachádza viac, ako 15 000 filmov a zobrazuje vám len tie, ktoré sa vám budú páčiť (neskôr dozvieme sa, ako to funguje). Fakt: ani jeden používateľ Netflix nebol by schopný si samostatne nájsť film alebo seriál, ktorý by sa mu páčil bez požívania algoritmu odporúčania filmov [1].
+V systéme sa nachádza viac, ako 15 000 filmov a zobrazuje vám len tie, ktoré sa vám budú páčiť (neskôr dozvieme sa, ako to funguje). Fakt: ani jeden používateľ Netflix nebol by schopný si samostatne nájsť film alebo seriál, ktorý by sa mu páčil bez požívania algoritmu odporúčania filmov \cite{netflixRecAlgorithm}.
  
 V tomto článku sa podrobne pozrieme na algoritmy spoločnosti Netflix. V súčasnosti je systém Netflix postavený na algoritme, ktorý využíva umelú inteligenciu a strojové učenie. Pozrieme sa aj na umiestnenie odporúčaní na obrazovke, kde je niekoľko typov návrhov. Prvým je „Odporúčané pre vás“, po ňom idú „Trendy“, na stránke sa nachádza aj záložka „New Releases“.
 
-Podrobne sa pozrieme aj na filtračné algoritmy, ktoré sa delia na dva hlavné typy. Akú rolu odohrávajú hodnotenia a správania používateľov v rámci algoritmu collaborative filtering a „filtrovanie na základe obsahu“. 
+Podrobne sa pozrieme aj na filtračné algoritmy, ktoré sa delia na dva hlavné typy. Akú rolu odohrávajú hodnotenia a správania používateľov v rámci algoritmu collaborative filtering a „filtrovanie na základe obsahu“.
 
 Zaujímavým aspektom sú aj systémy hodnotenia. Patrí medzi ne „Personalizované hodnotenie videa (PVR)“, „Top-N Ranking“, „Rebríček obľúbených filmov“ a „Zoznam zaujímavého obsahu na neskoršie sledovanie“. Každé z týchto hodnotení je personalizované pre jednotlivých používateľov, čo je veľmi zaujímavé.
 
@@ -62,9 +55,14 @@ V rámci článku sa budeme venovať aj typom údajov, ktoré Netflix používa.
 
 \section{Záver}
 
+\begin{thebibliography}{9}
 
-\bibliography{literatura}
+\bibitem{netflixRecAlgorithm} 
+\href{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}{Netflix Recommendation Algorithm}.  
 
-\bibliographystyle{plain}
+\bibitem{netflixAlgorithm} 
+\href{https://recostream.com/blog/recommendation-system-netflix}{Netflix Algorithm}.  
+
+\end{thebibliography}
 
 \end{document}
