--- a/literatura.bib
+++ b/literatura.bib
@@ -46,3 +46,19 @@
 	title = "A Framework for Software Product Line Practice---Version 5.0",
 	howpublished = "\url{http://www.sei.cmu.edu/productlines/frame_report/}",
 }
+
+@misc{netflixRecAlgorithm,
+  author = {Stratoflow},
+  title = {Netflix Recommendation Algorithm},
+  howpublished = {\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}},
+  year = {2023},
+  note = {Accessed: 2024-10-03}
+}
+
+@misc{netflixAlgorithm,
+  author = {Recostream},
+  title = {Netflix Algorithm},
+  howpublished = {\url{https://recostream.com/blog/recommendation-system-netflix}},
+  year = {2023},
+  note = {Accessed: 2024-10-03}
+}
