add info to struture

--- a/clanok.tex
+++ b/clanok.tex
@@ -40,21 +40,34 @@ V rámci článku sa budeme venovať aj typom údajov, ktoré Netflix používa.
 \end{abstract}
 
 \section{Úvod}
+Úvod do problematiky algoritmov odporúčania na platforme Netflix.
+Krátke zhrnutie vplyvu technológií a umelé inteligencie na naše rozhodovanie pri výbere obsahu na sledovanie.
 
 \section{Technológie a Umelá inteligencia v Netflix}
+Vplyv technológií a umelé inteligencie na dnešné odporúčacie systémy.
+Vývoj algoritmov odporúčania na Netflixu a ich súčasný stav.
 
 \section{Typy Odporúčaní na Netflix}
+Detailné vysvetlenie rôznych typov odporúčaní (napr. Odporúčané pre vás, Trendy, Nové vydania) a ich úloha v navigácii používateľov.
 
 \section{Filtračné algoritmy}
+Porovnanie a vysvetlenie algoritmov collaborative filtering a filtrovania na základe obsahu.
+Vplyv hodnotení a správania používateľov na úspešnosť algoritmov.
 
 \section{Systémy Hodnotenia}
+Prehľad o rôznych systémoch hodnotenia (Personalizované hodnotenie videa, Top-N Ranking, Rebríčky obľúbených filmov, Zoznam zaujímavého obsahu na neskoršie sledovanie).
+Ako tieto systémy prispievajú k osobnej skúsenosti používateľov.
 
 \section{Typy Údajov v Netflix}
+Kategórie základných údajov (interakcie používateľa, histórie sledovania).
+Význam dodatočných informácií (žánre, korelačné údaje, informácie o obsahu).
 
 \section{Vplyv špecifickejších informácií}
+Analýza vplyvu denného času, používaného zariadenia a priemerného času sledovania na odporúčacie algoritmy Netflixu.
 
 \section{Záver}
-
+Zhodnotenie významu algoritmov odporúčania pre Netflix a ich vplyv na používateľskú skúsenosť.
+Diskusia o budúcnosti vývoja algoritmov odporúčania.
 \begin{thebibliography}{9}
 
 \bibitem{netflixRecAlgorithm} 
