add UMLet and UMLetino

--- a/clanok.tex
+++ b/clanok.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,twoside,slovak,a4paper]{article}
+\documentclass[10pt,twocolumn,twoside,slovak,a4paper]{article}
 
 \usepackage[slovak]{babel}
 \usepackage[IL2]{fontenc} 
@@ -38,6 +38,19 @@ Zaujímavým aspektom sú aj systémy hodnotenia. Patrí medzi ne „Personalizo
 V rámci článku sa budeme venovať aj typom údajov, ktoré Netflix používa. Tie sa zhruba delia na dva typy: základné typy zhromažďovaných údajov a dodatočné informácie. Medzi základné patria „interakcie používateľa so stránkou“, ktoré pozostávajú z histórie sledovania a hodnotení. Druhým typom sú „korelačné údaje“, „informácie o obsahu knižnice Netflix“, ako napríklad žánre. Ďalšie uvidíme ako ovplyvňujú  špecifickejšie typy informácií, ako sú napríklad denný čas, používané zariadenie alebo priemerná dĺžka sledovania.
 
 \end{abstract}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.6\textwidth]{Images/Filtering_pdf.pdf} % Adjust width as needed
+  \caption{Prvý obrázok UX/UI.}
+\end{figure}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.6\textwidth]{Images/RecommendationSystem_pdf.pdf} % Adjust width as needed
+  \caption{Druhý obrázok UX/UI.}
+\end{figure}
+
 
 \section{Úvod}
 Úvod do problematiky algoritmov odporúčania na platforme Netflix.
