Edit UMLet/UMLetino images

--- a/clanok.tex
+++ b/clanok.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,twocolumn,twoside,slovak,a4paper]{article}
+\documentclass[10pt,twoside,slovak,a4paper]{article}
 
 \usepackage[slovak]{babel}
 \usepackage[IL2]{fontenc} 
@@ -41,14 +41,15 @@ V rámci článku sa budeme venovať aj typom údajov, ktoré Netflix používa.
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.6\textwidth]{Images/Filtering_pdf.pdf} % Adjust width as needed
-  \caption{Prvý obrázok UX/UI.}
+  \includegraphics[width=1\textwidth]{Images/Filtering_pdf.pdf} % Adjust width as needed
+  \caption{Type of Filtering}
 \end{figure}
+
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.6\textwidth]{Images/RecommendationSystem_pdf.pdf} % Adjust width as needed
-  \caption{Druhý obrázok UX/UI.}
+  \includegraphics[width=1\textwidth]{Images/RecommendationSystem_pdf.pdf} % Adjust width as needed
+  \caption{Recommendation System}
 \end{figure}
 
 
