--- a/clanok.tex
+++ b/clanok.tex
@@ -22,6 +22,12 @@
 
 \begin{document}
 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=\textwidth]{Images/fiit_logo.png} 
+  \caption{Top Image}
+\end{figure}
+
 \maketitle
 
 \begin{abstract}
