--- a/literatura.bib
+++ b/literatura.bib
@@ -1,64 +1,24 @@
-% ....nĂˇzov sĂşboru je: literatura.bib
-% kniha
-@book{Coplien:MPD,
-	author = "James O. Coplien",
-	title = "Multi-Paradigm Design for C++",
-	publisher = "Addison-Wesley",
-	year = 1999
+@misc{Netflix:Algorithm,
+	author = {Arkadiusz Krysik},
+	title = {Netflix Algorithm: How Netflix Uses AI to Improve Personalization},
+	 url = "\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}",
 }
 
-% ÄŤlĂˇnok v ÄŤasopise
-@article{Czarnecki:Staged,
-    author = "Krzysztof Czarnecki and Simon Helsen and Ulrich Eisenecker",
-    title = "Staged Configuration Through Specialization and Multi-Level Configuration of Feature Models",
-    journal = "Software Process: Improvement and Practice",
-    volume = 10,
-    issue = 2,
-    month = apr # "/" # jun,
-    year = "2005",
-    pages = "143--169",
+@misc{Netflix:Recommendation:System,
+        author = {Arkadiusz Krysik},
+        title = {Netflix Algorithm: Everything You Need to Know About the Recommendation System of the Most Popular Streaming Portal},
+        url = "\url{https://recostream.com/blog/recommendation-system-netflix}"
 }
 
-% ÄŤlĂˇnok v zbornĂ­ku
-@inproceedings{Czarnecki:Progress,
-	author = "Krzysztof Czarnecki and Chang Hwan Peter Kim",
-	title = "Cardinality-Based Feature Modeling and Constraints: A Progress Report",
-	booktitle = "International Workshop on Software Factories, OOPSLA 2005",
-	month = oct,
-	year = "2005",
-	address = "San Diego, USA",
+@misc{Bennett,
+    author = {James Bennett and Stan Lanning},
+    title = {An Introduction to Recommender Systems at Netflix},
+    url = "\url{https://arxiv.org/abs/1903.04638%7D}",
 }
 
-% technickĂˇ sprĂˇva (nepublikovanĂˇ)
-@techreport{Kang:FODA,
-	author = "Kyo C. Kang and Sholom G. Cohen and James A. Hess and William E. Novak and A. Spencer Peterson",
-	title = "Feature-Oriented Domain Analysis ({FODA}): A Feasibility Study",
-	institution = "Software Engineering Institute, Carnegie Mellon University",
-	address = "Pittsburgh, USA",
-	month = nov,
-	year = 1990,
-	number = "CMU/SEI-90-TR-21",
+@misc{Habr, 
+    author = {Yakov Livshits}, 
+    title = {How Netflix’s Recommendation Algorithm Works: A Look Behind the Scenes}, 
+    url = {https://habr.com/en/articles/677396/},
 }
 
-% zdroj na webe
-@misc{PLP-Framework,
-	author = "Software Engineering Institute, Carnegie Mellon University",
-	title = "A Framework for Software Product Line Practice---Version 5.0",
-	howpublished = "\url{http://www.sei.cmu.edu/productlines/frame_report/}",
-}
-
-@misc{netflixRecAlgorithm,
-  author = {Stratoflow},
-  title = {Netflix Recommendation Algorithm},
-  howpublished = {\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}},
-  year = {2023},
-  note = {Accessed: 2024-10-03}
-}
-
-@misc{netflixAlgorithm,
-  author = {Recostream},
-  title = {Netflix Algorithm},
-  howpublished = {\url{https://recostream.com/blog/recommendation-system-netflix}},
-  year = {2023},
-  note = {Accessed: 2024-10-03}
-}
