--- a/literatura.bib
+++ b/literatura.bib
@@ -19,6 +19,24 @@
 @misc{Habr, 
     author = {Yakov Livshits}, 
     title = {How Netflix’s Recommendation Algorithm Works: A Look Behind the Scenes}, 
-    url = {https://habr.com/en/articles/677396/},
+    url = "\url{https://habr.com/en/articles/677396/}",
 }
 
+@misc{Collaborative:Filtering, 
+    author = {Prem Kumar}, 
+    title = {Netflix Movie Recommendation — Using Collaborative Filtering}, 
+    url = "\url{https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d}",
+}
+
+@misc{Linkedin, 
+    author = {Sachin Sharma}, 
+    title = {The Magic of Recommendation Systems: How Netflix Knows What You Like}, 
+    url = "\url{https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc#:~:text=Content%2Dbased%20filtering%20considers%20the,it%20with%20users'%20past%20preferences.}",
+}
+
+@misc{Argoid,
+    author = {Argoid Team},
+    title = {How Does Netflix's Recommendation Engine Work?},
+    url = "\url{https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work#:~:text=Personalized%20Video%20Ranker%20(PVR)&text=These%20numbers%20keep%20changing%20depending,%2C%20Romance%2C%20and%20so%20on.}",
+
+}
