--- a/literatura.bib
+++ b/literatura.bib
@@ -40,3 +40,24 @@
     url = "\url{https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work#:~:text=Personalized%20Video%20Ranker%20(PVR)&text=These%20numbers%20keep%20changing%20depending,%2C%20Romance%2C%20and%20so%20on.}",
 
 }
+
+@misc{Ranking:System,
+    author = {David Chong},
+    title = {Deep Dive into Netflix’s Recommender System},
+    url = "\url{https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48}",
+
+}
+
+@misc{Top,
+    author = {Arkadiusz Krysik},
+    title = {Inside the Netflix Algorithm: AI’s Role in Personalizing User Experience},
+    url = "\url{https://stratoflow.com/how-netflix-recommendation-system-works/}",
+
+}
+
+@misc{Data,
+    author = {The Product Folks Team},
+    title = {Unlocking Viewer Engagement: How Netflix Uses Data to Win Over 230+ Million Users Worldwide},
+    url = "\url{https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide#:~:text=The%20Power%20of%20Data%20Collection,at%20what%20time%20of%20day.}",
+
+}
