Preliminary version of the article v2

--- a/clanok.tex
+++ b/clanok.tex
@@ -7,9 +7,6 @@
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage{cite}
-\usepackage{amsmath}
-
-\pagestyle{headings}
 
 \title{Algoritmy odporúčania filmov v Netflix\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2024/25, vedenie: Ing. Richard Marko, PhD}}
 
@@ -105,5 +102,5 @@ Odporúčací systém Netflix je zložitý mechanizmus na spracovanie veľkého 
 
 \bibliography{literatura}
 \bibliographystyle{plain}
-
+%\printbibliography
 \end{document}
