--- a/literatura.bib
+++ b/literatura.bib
@@ -1,63 +1,77 @@
 @misc{Netflix:Algorithm,
 	author = {Arkadiusz Krysik},
 	title = {Netflix Algorithm: How Netflix Uses AI to Improve Personalization},
-	 url = "\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}",
+	url = "https://stratoflow.com/how-netflix-recommendation-algorithm-work/",
+    month = {June},
+    year = {2024},
 }
 
 @misc{Netflix:Recommendation:System,
-        author = {Arkadiusz Krysik},
-        title = {Netflix Algorithm: Everything You Need to Know About the Recommendation System of the Most Popular Streaming Portal},
-        url = "\url{https://recostream.com/blog/recommendation-system-netflix}"
+    author = {Arkadiusz Krysik},
+    title = {Netflix Algorithm: Everything You Need to Know About the Recommendation System of the Most Popular Streaming Portal},
+    url = "https://recostream.com/blog/recommendation-system-netflix",
+    month = {August},
+    year = {2021},
 }
 
 @misc{Bennett,
     author = {James Bennett and Stan Lanning},
     title = {An Introduction to Recommender Systems at Netflix},
-    url = "\url{https://arxiv.org/abs/1903.04638%7D}",
+    url = "https://arxiv.org/abs/1903.04638%7D",
+    year = {2019},
 }
 
 @misc{Habr, 
     author = {Yakov Livshits}, 
     title = {How Netflix’s Recommendation Algorithm Works: A Look Behind the Scenes}, 
-    url = "\url{https://habr.com/en/articles/677396/}",
+    url = "https://habr.com/en/articles/677396/",
+    month = {July},
+    year = {2022},
 }
 
 @misc{Collaborative:Filtering, 
     author = {Prem Kumar}, 
     title = {Netflix Movie Recommendation — Using Collaborative Filtering}, 
-    url = "\url{https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d}",
+    url = "https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d",
 }
 
 @misc{Linkedin, 
     author = {Sachin Sharma}, 
     title = {The Magic of Recommendation Systems: How Netflix Knows What You Like}, 
-    url = "\url{https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc#:~:text=Content%2Dbased%20filtering%20considers%20the,it%20with%20users'%20past%20preferences.}",
+    url = "https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc",
+    month = {February},
+    year = {2024},
 }
 
 @misc{Argoid,
     author = {Argoid Team},
     title = {How Does Netflix's Recommendation Engine Work?},
-    url = "\url{https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work#:~:text=Personalized%20Video%20Ranker%20(PVR)&text=These%20numbers%20keep%20changing%20depending,%2C%20Romance%2C%20and%20so%20on.}",
+    url = "https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work.",
+    month = {July},
+    year = {2024},
 
 }
 
 @misc{Ranking:System,
     author = {David Chong},
     title = {Deep Dive into Netflix’s Recommender System},
-    url = "\url{https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48}",
-
+    url = "https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48",
 }
 
 @misc{Top,
     author = {Arkadiusz Krysik},
     title = {Inside the Netflix Algorithm: AI’s Role in Personalizing User Experience},
-    url = "\url{https://stratoflow.com/how-netflix-recommendation-system-works/}",
+    url = "https://stratoflow.com/how-netflix-recommendation-syworks/",
+    month = {August},
+    year = {2024},
 
 }
 
 @misc{Data,
     author = {The Product Folks Team},
     title = {Unlocking Viewer Engagement: How Netflix Uses Data to Win Over 230+ Million Users Worldwide},
-    url = "\url{https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide#:~:text=The%20Power%20of%20Data%20Collection,at%20what%20time%20of%20day.}",
+    url = "https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide",
+    month = {August},
+    year = {2024},
 
 }
