--- a/literatura.bib
+++ b/literatura.bib
@@ -1,77 +1,77 @@
 @misc{Netflix:Algorithm,
 	author = {Arkadiusz Krysik},
 	title = {Netflix Algorithm: How Netflix Uses AI to Improve Personalization},
-	url = "https://stratoflow.com/how-netflix-recommendation-algorithm-work/",
     month = {June},
     year = {2024},
+    howpublished = "\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}",
 }
 
 @misc{Netflix:Recommendation:System,
     author = {Arkadiusz Krysik},
     title = {Netflix Algorithm: Everything You Need to Know About the Recommendation System of the Most Popular Streaming Portal},
-    url = "https://recostream.com/blog/recommendation-system-netflix",
     month = {August},
     year = {2021},
+    howpublished = "\url{https://recostream.com/blog/recommendation-system-netflix}",
 }
 
 @misc{Bennett,
     author = {James Bennett and Stan Lanning},
     title = {An Introduction to Recommender Systems at Netflix},
-    url = "https://arxiv.org/abs/1903.04638%7D",
     year = {2019},
+    howpublished = "\url{https://arxiv.org/abs/1903.04638%7D}",
 }
 
 @misc{Habr, 
     author = {Yakov Livshits}, 
     title = {How Netflix’s Recommendation Algorithm Works: A Look Behind the Scenes}, 
-    url = "https://habr.com/en/articles/677396/",
     month = {July},
     year = {2022},
+    howpublished = "\url{https://habr.com/en/articles/677396/}",
 }
 
 @misc{Collaborative:Filtering, 
     author = {Prem Kumar}, 
     title = {Netflix Movie Recommendation — Using Collaborative Filtering}, 
-    url = "https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d",
+    howpublished = "\url{https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d}",
 }
 
 @misc{Linkedin, 
     author = {Sachin Sharma}, 
     title = {The Magic of Recommendation Systems: How Netflix Knows What You Like}, 
-    url = "https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc",
     month = {February},
     year = {2024},
+    howpublished = "\url{https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc}",
 }
 
 @misc{Argoid,
     author = {Argoid Team},
     title = {How Does Netflix's Recommendation Engine Work?},
-    url = "https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work.",
     month = {July},
     year = {2024},
+    howpublished = "\url{https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work.}",
 
 }
 
 @misc{Ranking:System,
     author = {David Chong},
     title = {Deep Dive into Netflix’s Recommender System},
-    url = "https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48",
+    howpublished = "\url{https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48}",
 }
 
 @misc{Top,
     author = {Arkadiusz Krysik},
     title = {Inside the Netflix Algorithm: AI’s Role in Personalizing User Experience},
-    url = "https://stratoflow.com/how-netflix-recommendation-syworks/",
     month = {August},
     year = {2024},
+    howpublished = "\url{https://stratoflow.com/how-netflix-recommendation-syworks/}",
 
 }
 
 @misc{Data,
     author = {The Product Folks Team},
     title = {Unlocking Viewer Engagement: How Netflix Uses Data to Win Over 230+ Million Users Worldwide},
-    url = "https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide",
     month = {August},
     year = {2024},
+    howpublished = "\url{https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide}",
 
 }
